syntax = "proto3";

service RadioEmulator {
	rpc StartTx(Empty) returns (Empty){}
	rpc StopTx(Empty) returns (Empty){}
}

message Empty{}